@@ -2,6 +2,8 @@ BUGS/IMMEDIATE
  - None so far.
 
 NEEDED FEATURES
+ - Document a typical way to structure your password file.
+
  - '-a' will add a password, taking a number of strings in order of argv and
    using a format defined in the config file, this avoids opening the passwords
    on screen in the first place. document it.
@@ -26,9 +28,6 @@ OTHER IDEAS
 
  - Store/backup automatically to S3? or maybe storage works like wal logs in pg
    and the user can define put and get commands?
-
- - Define a comment character? That would allow to skip headers and disable older
-   passwords (only used when filtering).
 
  - Other types of encryption (aes-256 via openssl?)
 
