@@ -16,23 +16,29 @@ if [ -n "$TRAVIS" ]; then
 	exit 0
 fi
 
-. ./bootstrap.sh
+. ./_bootstrap.sh
 
-run_test test_initial_setup
-run_test test_help
-run_test test_version
-run_test test_generate_default_count
-run_test test_password_count_config
-run_test test_password_count_cmdline
-run_test test_profile_charset
-run_test test_filter_standard_one_keyword
-run_test test_filter_standard_two_keywords
-run_test test_filter_regex_one_keyword
-run_test test_filter_regex_two_keywords
-run_test test_pager_timeout
-run_test test_lock_retcode
-run_test test_lock_output
-run_test test_backup_file
+
+for each in test_*.sh; do
+	run_test ${each}
+done
+# run_test test_backup_disabled
+# run_test test_backup_file
+# run_test test_initial_setup
+# run_test test_help
+# run_test test_version
+# run_test test_generate_default_count
+# run_test test_password_count_config
+# run_test test_password_count_cmdline
+# run_test test_profile_charset
+# run_test test_filter_standard_one_keyword
+# run_test test_filter_standard_two_keywords
+# run_test test_filter_standard_with_comments
+# run_test test_filter_regex_one_keyword
+# run_test test_filter_regex_two_keywords
+# run_test test_pager_timeout
+# run_test test_lock_retcode
+# run_test test_lock_output
 
 print_summary
 
